<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="module"
            type="com.uncle.administrator.fleamarket.chat.ChatVM" />
    </data>

    <LinearLayout
        android:id="@+id/ll_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<include layout="@layout/include_navi" />-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/sw_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rc_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

            </android.support.v4.widget.SwipeRefreshLayout>

            <RelativeLayout
                android:id="@+id/layout_record"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/chat_top_voice_bg"
                android:padding="10dp"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/iv_record"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/action_settings"
                    android:src="@mipmap/chat_icon_voice1" />

                <TextView
                    android:id="@+id/tv_voice_tips"
                    style="@style/style_text_white"
                    android:layout_below="@id/iv_record"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/voice_up_tips"
                    android:textSize="14sp" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/base_comment_emo_bar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin_5"
                android:paddingRight="@dimen/margin_5">

                <Button
                    android:id="@+id/btn_chat_add"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_chat_add_selector"
                    android:gravity="center"
                    android:onClick="@{module::onAddClick}" />

                <Button
                    android:id="@+id/btn_chat_emo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/btn_chat_emo_selector"
                    android:gravity="center"
                    android:onClick="@{module::onEmoClick}"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/edit_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/drawable_edit_normal"
                    android:gravity="left|center"
                    android:hint="请输入新消息"
                    android:imeOptions="flagNoExtractUi"
                    android:lineSpacingExtra="@dimen/margin_3"
                    android:minHeight="@dimen/height_40"
                    android:onClick="@{module::onEditClick}"
                    android:padding="@dimen/margin_5"
                    android:textColor="@color/color_1e1e1e"
                    android:textColorHint="@color/color_b4"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/btn_speak"
                    style="@style/style_text_black"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_chat_record_selector"
                    android:gravity="center"
                    android:text="@string/longclick_speak"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_chat_voice"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/btn_chat_voice_selector"
                    android:gravity="center"
                    android:onClick="@{module::onVoiceClick}"
                    android:textColor="@color/color_text_black" />

                <Button
                    android:id="@+id/btn_chat_keyboard"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_chat_keyboard_selector"
                    android:gravity="center"
                    android:onClick="@{module::onKeyClick}"
                    android:textColor="@color/color_text_black"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_chat_send"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@drawable/btn_chat_send_selector"
                    android:gravity="center"
                    android:onClick="@{module::onSendClick}"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_emote_divder"
                android:focusable="false" />

            <LinearLayout
                android:id="@+id/layout_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/layout_emo"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/pager_emo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/tv_picture"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawablePadding="10dp"
                        android:drawableTop="@drawable/btn_chat_add_picture_selector"
                        android:gravity="center"
                        android:onClick="@{module::onPictureClick}"
                        android:text="@string/picture" />

                    <TextView
                        android:id="@+id/tv_camera"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawablePadding="10dp"
                        android:drawableTop="@drawable/btn_chat_add_camera_selector"
                        android:gravity="center"
                        android:onClick="@{module::onCameraClick}"
                        android:text="@string/camera" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
